--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -1302,3 +1302,10 @@ ul.invalid {
     border-bottom-color: #a94442;
   }
 }
+
+.modal {
+  overflow: auto;
+}
+[gn-popup] {
+  position: fixed !important; // `absolute` is set in element
+}
