--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -227,6 +227,6 @@
 }
 
 .modal-open {
-  overflow: hidden;
+  overflow: visible;
 }
 
